--- a/index.html
+++ b/index.html
@@ -1,39 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
-<body>
 
-  Features
+<body>
+  <header>
+    <div class="wrapper-header">
+      <div class="flex-layout-header">
+        <a href="/"><img src="images/logo.svg" alt="Logo"></a>
+        <nav>
+          <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="navigation">
+            <div class="first">
+              <div href="" class="arrow-link">
+                <div class="dropdown-trigger-features">
+                  <span>Features</span><img src="images/icon-arrow-down.svg" alt="">
+                </div>
+                <ul class="dropdown-container-features">
+                  <li><img src="images/icon-todo.svg" alt=""><span>Todo List</span></li>
+                  <li><img src="images/icon-calendar.svg" alt=""><span>Calendar</span></li>
+                  <li><img src="images/icon-reminders.svg" alt=""><span>Reminders</span></li>
+                  <li><img src="images/icon-planning.svg" alt=""><span>Planning</span></li>
+                </ul>
+              </div>
+              <div href="" class="arrow-link">
+                <div class="dropdown-trigger-company">
+                  <span>Company</span><img src="images/icon-arrow-down.svg" alt="">
+                </div>
+                <ul class="dropdown-container-company">
+                  <li>History</li>
+                  <li>Our Team</li>
+                  <li>Blog</li>
+                </ul>
+              </div>
+              <a href="">Careers</a>
+              <a href="">About</a>
+            </div>
+            <div class="second">
+              <a href="">Login</a>
+              <a href="">Register</a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="wrapper-main flex-layout-main-desktop">
+      <img class="img-hero-mobile" src="images/image-hero-mobile.png" alt="">
+      <section class="intro-text-container">
+        <h1>Make remote work</h1>
+        <p>Get your team in sync, no matter your location. Streamline processes,
+          create team rituals, and watch productivity soar.</p>
+        <button>Learn more</button>
+        <div class="svgs-container">
+          <img src="images/client-databiz.svg" alt="">
+          <img src="images/client-audiophile.svg" alt="">
+          <img src="images/client-meet.svg" alt="">
+          <img src="images/client-maker.svg" alt="">
+        </div>
+      </section>
+      <img class="img-hero-desktop" src="images/image-hero-desktop.png" alt="">
+    </div>
+  </main>
+  <!-- 
   Company
   Careers
   About
 
   Login
-  Register
+  Register -->
 
-  Make remote work
 
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
 
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Nestor</a>.
+  </div> -->
+  <script src="js/interactions.js"></script>
 </body>
+
 </html>
