Fix the arrow icons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <div class="first">
               <div href="" class="arrow-link">
                 <div class="dropdown-trigger-features">
-                  <span>Features</span><img src="images/icon-arrow-down.svg" alt="">
+                  <span>Features</span><img class="arrow-down" src="images/icon-arrow-down.svg" alt=""><img
+                    class="arrow-up" src="images/icon-arrow-up.svg" alt="">
                 </div>
                 <ul class="dropdown-container-features">
                   <li><img src="images/icon-todo.svg" alt=""><span>Todo List</span></li>
@@ -54,7 +55,8 @@
               </div>
               <div href="" class="arrow-link">
                 <div class="dropdown-trigger-company">
-                  <span>Company</span><img src="images/icon-arrow-down.svg" alt="">
+                  <span>Company</span><img class="arrow-down" src="images/icon-arrow-down.svg" alt=""><img
+                    class="arrow-up" src="images/icon-arrow-up.svg" alt="">
                 </div>
                 <ul class="dropdown-container-company">
                   <li>History</li>
